--- a/FinalProject_VS/FinalProject/FinalProject.vcxproj.filters
+++ b/FinalProject_VS/FinalProject/FinalProject.vcxproj.filters
@@ -86,4 +86,9 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="Music\background.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+  </ItemGroup>
 </Project>
